# controller-supporter

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-aarch64  Dockerfile-amd64  Gamepad Info Collection.md  README.md  Raspberry Pi Setup.md  buildAarch64.sh  docker-compose.yml  hardware info collection.md  rustfmt.toml
archive/: channels_benchmark.rs
archive/rusb/: Cargo.toml
archive/rusb/src/: main.rs
archive/with_std/src/: finding_controllers.rs  main.rs  read_input.rs
controller-supporter/: Cargo.toml
controller-supporter/src/: finding_controllers.rs  main.rs  structs.rs
doc/: Development.md  Gamepad Info Collection.md  Raspberry Pi Setup.md
doku/: Development.md
gamepad-bridge/: Cargo.toml  Dockerfile  bt_scan_out  buildAarch64.sh  docker_build_and_run.sh  rustfmt.toml
gamepad-bridge/src/: bluetooth.rs  bluetooth_fn.rs  helper_fn.rs  hidapi_fn.rs  hidapi_gamepads.rs  hidapi_read_ps5_usb.rs  hidapi_structs.rs  main.rs  read_ps5_usb.rs  usb_descr.rs  usb_gadget.rs  usb_gadget_old.rs  usb_gamepads.rs
rust-project/: Cargo.toml
rust-project/src/: finding_controllers.rs  main.rs  structs.rs
src/: bluetooth_fn.rs  helper_fn.rs  hidapi_fn.rs  hidapi_gamepad.rs  hidapi_read_ps5_usb.rs  main.rs  universal_gamepad.rs  usb_gadget.rs  usb_gamepad.rs  usb_gamepad_keyboard.rs  usb_gamepad_ps4.rs  usb_gamepad_ps5.rs  usb_gamepads.rs
testblue/: Cargo.toml
testblue/src/: main.rs
usb-middleman/: Cargo.toml  README.md
usb-middleman/src/: hidapi.rs  hidapi_structs.rs  main.rs  rusb.rs
